feat: add translation to notFound global pages

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -14,5 +14,11 @@
     "team": "Team",
     "contact": "Contact",
     "language": "Language"
+  },
+  "NotFound": {
+    "title": "Page not found",
+    "description": "The page you are looking for may not exist or be currently unavailable.",
+    "home": "Home page",
+    "contact": "Contact"
   }
 }
