--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -17,7 +17,7 @@
   },
   "NotFound": {
     "title": "Page not found",
-    "description": "The page you are looking for may not exist or be currently unavailable.",
+    "description": "Sorry, we couldn’t find the page you’re looking for.",
     "home": "Home page",
     "contact": "Contact"
   }
