chore: update main navigation links and yours translations

--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -12,7 +12,7 @@
     "product": "Product",
     "features": "Features",
     "team": "Team",
-    "contact": "Contact",
+    "help center": "Help Center",
     "language": "Language"
   },
   "NotFound": {
