--- a/src/translations/pt-BR.json
+++ b/src/translations/pt-BR.json
@@ -12,7 +12,7 @@
     "product": "Produto",
     "features": "Funcionalidades",
     "team": "Desenvolvedores",
-    "contact": "Contato",
+    "help center": "Central de ajuda",
     "language": "Idioma"
   },
   "NotFound": {
