--- a/src/translations/en-US.json
+++ b/src/translations/en-US.json
@@ -20,5 +20,16 @@
     "description": "Sorry, we couldn’t find the page you’re looking for.",
     "home": "Home page",
     "contact": "Contact"
+  },
+  "NavItems": {
+    "home": "Home page",
+    "users": "Users",
+    "products": "Products",
+    "kitchen": "Kitchen",
+    "receipts": "Receipts",
+    "reports": "Reports",
+    "stock": "Stock",
+    "support": "Support",
+    "settings": "Settings"
   }
 }
